# netease-cloud-music-gtk-qmrVer

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  meson.build
.cursor/agents/: grok.md
.github/ISSUE_TEMPLATE/: bug-提交.md
.github/actions/windows-portable/: action.yml
.github/workflows/: meson.yml  nightly.yml  release.yml
build-aux/windows/: README-WINDOWS.txt  README.md  bootstrap.ps1  build.ps1  cargo.ps1  dev.ps1  env.ps1  ffmpeg-build.sh  package.ps1
data/: com.gitee.gmg137.NeteaseCloudMusicGtk4.gschema.xml  meson.build  netease_cloud_music_gtk4.gresource.xml
data/gtk/: discover.ui  help-overlay.ui  my-page.ui  player-controls.ui  playlist-lyrics-page.ui  preferences.ui  songlist-page.ui  songlist-row.ui  songlist-view.ui  toplist.ui  window.ui
data/themes/: discover.css  modern.css
docs/: ui-redesign-2026-07.md
docs/superpowers/plans/: 2026-07-19-modern-content-ui.md  2026-07-19-unified-main-pages.md  2026-07-20-fullscreen-layout.md  2026-07-20-my-page-content-preview.md
docs/superpowers/specs/: 2026-07-18-configurable-header-pages-design.md  2026-07-19-modern-content-ui-design.md  2026-07-19-unified-main-pages-design.md  2026-07-20-fullscreen-layout-design.md  2026-07-20-my-page-content-preview-design.md
po/: POTFILES  netease-cloud-music-gtk4.pot  zh_CN.po
src/: application.rs  config.rs.in  main.rs  meson.build  model.rs  ncmapi.rs  path.rs  utils.rs  window.rs
src/audio/: mod.rs  mpris.rs  mpris_stub.rs  playlist.rs
src/gui/: discover.rs  mod.rs  my_page.rs  player_controls.rs  playlist_lyrics.rs  preferences.rs  search_singer_page.rs  search_song_page.rs  search_songlist_page.rs  songlist_grid_item.rs  songlist_page.rs  songlist_row.rs  songlist_view.rs  system_tray.rs  system_tray_stub.rs  toplist.rs  typography.rs
src/platform/: mod.rs
